Fix hero logo alignment

--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@
 
 .logo-overlay {
   position: absolute;
-  /*left: 50%;*/
-  text-aline: center;
+  left: 50%;
+  text-align: center;
   top: calc(var(--hero-circle-top) + (var(--hero-circle-size) - var(--hero-overlay-size)) / 2);
   /* width: var(--hero-overlay-size); */
   /* aspect-ratio: 1 / 1; */
